--- a/leo/LGD_Phase2_CoTrain.ipynb
+++ b/leo/LGD_Phase2_CoTrain.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 5"
+    "### Step 5\n",
+    "* predict un and test\n",
+    "* ouput fname,softmax CSV"
    ]
   },
   {
@@ -94,14 +96,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "每個fold只能留下一個model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def output_softmax(feature_type,test_or_un,base_model):\n",
-    "    if not os.path.exists('feature/'+feature_type+'/cotrain/'):\n",
-    "        os.makedirs('feature/'+feature_type+'/cotrain/') # 儲存資料夾\n",
+    "def output_softmax(feature_type,test_or_un,base_model,co_or_self):\n",
+    "    if not os.path.exists('feature/'+feature_type+'/'+co_or_self+'/unverified/'):\n",
+    "        os.makedirs('feature/'+feature_type+'/'+co_or_self+'/unverified/') # unverified儲存資料夾\n",
+    "    if not os.path.exists('feature/'+feature_type+'/'+co_or_self+'/test/'):\n",
+    "        os.makedirs('feature/'+feature_type+'/'+co_or_self+'/test/') # test儲存資料夾\n",
     "\n",
     "    if test_or_un =='un':\n",
     "        semi = np.load('feature/'+feature_type+'/X_unverified.npy') # predict unverified\n",
@@ -130,12 +141,12 @@
     "        df = df.rename(columns={'0_x':'fname','0_y':'0'})\n",
     "#         print(len(df))\n",
     "        if test_or_un =='un':\n",
-    "            df.to_csv('feature/'+feature_type+'/cotrain/leo_resnet_'+feature_type+'_unverified_'+str(fold+1)+'.csv')\n",
+    "            df.to_csv('feature/'+feature_type+'/'+co_or_self+'/unverified/leo_resnet_'+feature_type+'_unverified_'+str(fold+1)+'.csv',index=False)\n",
     "        elif test_or_un=='test':\n",
-    "            df.to_csv('feature/'+feature_type+'/cotrain/leo_resnet_'+feature_type+'_test_'+str(fold+1)+'.csv')\n",
+    "            df.to_csv('feature/'+feature_type+'/'+co_or_self+'/test/leo_resnet_'+feature_type+'_test_'+str(fold+1)+'.csv',index=False)\n",
     "        else:\n",
-    "            df.to_csv('feature/'+feature_type+'/cotrain/leo_resnet_'+feature_type+'_test_'+str(fold+1)+'.csv',index=False)\n",
-    "            df_un.to_csv('feature/'+feature_type+'/cotrain/leo_resnet_'+feature_type+'_unverified_'+str(fold+1)+'.csv',index=False)\n",
+    "            df.to_csv('feature/'+feature_type+'/'+co_or_self+'/test/leo_resnet_'+feature_type+'_test_'+str(fold+1)+'.csv',index=False)\n",
+    "            df_un.to_csv('feature/'+feature_type+'/'+co_or_self+'/unverified/leo_resnet_'+feature_type+'_unverified_'+str(fold+1)+'.csv',index=False)\n",
     "\n",
     "    return df"
    ]
@@ -182,19 +193,63 @@
     }
    ],
    "source": [
-    "feature_type = ['mfcc6']\n",
+    "feature_type = ['mfcc6','mfcc7']\n",
     "num_fold = 10\n",
     "test_or_un = ['both'] # un or test or both\n",
+    "co_or_self = 'selftrain' # cotrain or selftrain\n",
     "\n",
     "\n",
     "for fea in feature_type:\n",
     "    for tou in test_or_un:\n",
     "        base_model = 'model/'+fea+'/'\n",
-    "        df = output_softmax(feature_type=fea,test_or_un=tou,base_model=base_model)\n",
+    "        df = output_softmax(feature_type=fea,test_or_un=tou,base_model=base_model,co_or_self=co_or_self)\n",
     "        print('===finish:',tou,fea,len(df),'===')\n",
     "\n",
     "# df        "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "append un and test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_type = ['mfcc6','mfcc7']\n",
+    "num_fold = 10\n",
+    "test_or_un = ['both'] # un or test or both\n",
+    "co_or_self = 'selftrain' # cotrain or selftrain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "for fea in feature_type:\n",
+    "    if not os.path.exists('feature/'+feature_type+'/'+co_or_self+'/combine/'):\n",
+    "        os.makedirs('feature/'+feature_type+'/'+co_or_self+'/combine/') # unverified儲存資料夾\n",
+    "    for fold in range(num_fold):\n",
+    "        df_un = pd.read_csv('feature/'+feature_type+'/'+co_or_self+'/unverified/leo_resnet_'+feature_type+'_unverified_'+str(fold+1)+'.csv')\n",
+    "        df = pd.read_csv('feature/'+feature_type+'/'+co_or_self+'/test/leo_resnet_'+feature_type+'_test_'+str(fold+1)+'.csv') #test\n",
+    "        df = df_un.append(df)\n",
+    "        df.to_csv('feature/'+feature_type+'/'+co_or_self+'/combine/leo_resnet_'+feature_type+'_semi_'+str(fold+1)+'.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2786,17 +2841,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_type = 'mfcc7'\n",
-    "who = 'mow_mfcc4_resnet152_cotrain_Y'"
+    "feature_type = 'mfcc6'\n",
+    "who = 'jerry_mfcc3_resnet34_mixup_cotrain_Y'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -2805,7 +2860,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5763, 60, 259, 1) (9400, 60, 259, 1)\n"
+      "(5763, 64, 431, 1) (9400, 64, 431, 1)\n"
      ]
     }
    ],
@@ -2820,7 +2875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -2829,7 +2884,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(15163, 60, 259, 1)\n"
+      "(15163, 64, 431, 1)\n"
      ]
     },
     {
@@ -2838,7 +2893,7 @@
        "15163"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2852,7 +2907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -2941,7 +2996,7 @@
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>00c9e799.wav</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>15.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -2981,7 +3036,7 @@
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>0120d246.wav</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>22.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
@@ -2996,7 +3051,7 @@
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>013264d3.wav</td>\n",
-       "      <td>22.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
@@ -3006,7 +3061,7 @@
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>01506d76.wav</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>24.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
@@ -3021,7 +3076,7 @@
        "    <tr>\n",
        "      <th>27</th>\n",
        "      <td>017ea24e.wav</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>28.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
@@ -3041,7 +3096,7 @@
        "    <tr>\n",
        "      <th>15133</th>\n",
        "      <td>ff812cf5.wav</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>21.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15134</th>\n",
@@ -3066,7 +3121,7 @@
        "    <tr>\n",
        "      <th>15138</th>\n",
        "      <td>ff927bb1.wav</td>\n",
-       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15139</th>\n",
@@ -3076,7 +3131,7 @@
        "    <tr>\n",
        "      <th>15140</th>\n",
        "      <td>ff97972c.wav</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15141</th>\n",
@@ -3111,7 +3166,7 @@
        "    <tr>\n",
        "      <th>15147</th>\n",
        "      <td>ffb75ce0.wav</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>38.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15148</th>\n",
@@ -3146,7 +3201,7 @@
        "    <tr>\n",
        "      <th>15154</th>\n",
        "      <td>ffd5e900.wav</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15155</th>\n",
@@ -3206,7 +3261,7 @@
        "8      00ad7068.wav             NaN\n",
        "9      00c5808a.wav             NaN\n",
        "10     00c82919.wav             NaN\n",
-       "11     00c9e799.wav             NaN\n",
+       "11     00c9e799.wav            15.0\n",
        "12     00ce569f.wav             NaN\n",
        "13     00d1fe46.wav             NaN\n",
        "14     00d40fa2.wav             NaN\n",
@@ -3214,40 +3269,40 @@
        "16     00fbb28b.wav             NaN\n",
        "17     00fcbab2.wav             NaN\n",
        "18     010aa387.wav             NaN\n",
-       "19     0120d246.wav             NaN\n",
+       "19     0120d246.wav            22.0\n",
        "20     01235a12.wav             NaN\n",
        "21     01302128.wav             NaN\n",
-       "22     013264d3.wav            22.0\n",
+       "22     013264d3.wav             NaN\n",
        "23     013c3135.wav             7.0\n",
-       "24     01506d76.wav             NaN\n",
+       "24     01506d76.wav            24.0\n",
        "25     015cf474.wav             NaN\n",
        "26     01638f61.wav             NaN\n",
-       "27     017ea24e.wav             NaN\n",
+       "27     017ea24e.wav            28.0\n",
        "28     01811e48.wav             NaN\n",
        "29     0184c390.wav             NaN\n",
        "...             ...             ...\n",
-       "15133  ff812cf5.wav             NaN\n",
+       "15133  ff812cf5.wav            21.0\n",
        "15134  ff81cc5d.wav             1.0\n",
        "15135  ff85f513.wav             NaN\n",
        "15136  ff8c555d.wav             NaN\n",
        "15137  ff8cfb2d.wav             NaN\n",
-       "15138  ff927bb1.wav             7.0\n",
+       "15138  ff927bb1.wav             NaN\n",
        "15139  ff96680f.wav             NaN\n",
-       "15140  ff97972c.wav             NaN\n",
+       "15140  ff97972c.wav             7.0\n",
        "15141  ffa502ed.wav             NaN\n",
        "15142  ffa69cfc.wav             NaN\n",
        "15143  ffaca82d.wav             NaN\n",
        "15144  ffae796c.wav             2.0\n",
        "15145  ffb6eb52.wav             NaN\n",
        "15146  ffb6f4da.wav             NaN\n",
-       "15147  ffb75ce0.wav             NaN\n",
+       "15147  ffb75ce0.wav            38.0\n",
        "15148  ffba7963.wav             NaN\n",
        "15149  ffbc5fb8.wav             4.0\n",
        "15150  ffbe4fbf.wav             2.0\n",
        "15151  ffc9555f.wav             NaN\n",
        "15152  ffd137a4.wav             NaN\n",
        "15153  ffd48624.wav             NaN\n",
-       "15154  ffd5e900.wav             2.0\n",
+       "15154  ffd5e900.wav             NaN\n",
        "15155  ffd64be4.wav             NaN\n",
        "15156  ffd6e84f.wav             NaN\n",
        "15157  ffd9d282.wav             NaN\n",
@@ -3260,7 +3315,7 @@
        "[15163 rows x 2 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3273,7 +3328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -3281,10 +3336,10 @@
     {
      "data": {
       "text/plain": [
-       "3021"
+       "3629"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3299,14 +3354,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3021, 60, 259, 1) (3021,)\n"
+      "(3629, 64, 431, 1) (3629,)\n"
      ]
     }
    ],
