update project description

--- a/leo/LGD_Phase1_Stage1and2_ConvLSTM_ConvDense.ipynb
+++ b/leo/LGD_Phase1_Stage1and2_ConvLSTM_ConvDense.ipynb
@@ -781,13 +781,7 @@
       "3339/3339 [==============================] - 17s 5ms/step - loss: 2.2541 - acc: 0.3887 - val_loss: 2.9576 - val_acc: 0.2857\n",
       "\n",
       "Epoch 00083: val_acc did not improve from 0.41240\n",
-      "Epoch 84/3000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 84/3000\n",
       "3339/3339 [==============================] - 18s 5ms/step - loss: 2.2963 - acc: 0.3851 - val_loss: 6.8779 - val_acc: 0.0863\n",
       "\n",
       "Epoch 00084: val_acc did not improve from 0.41240\n",
@@ -2084,7 +2078,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
