--- a/leo/LGD_Phase1_ResNet.ipynb
+++ b/leo/LGD_Phase1_ResNet.ipynb
@@ -16,9 +16,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/leoqaz12/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'librosa'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-e08408a2a316>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msignal\u001b[0m \u001b[0;31m# audio processing\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfftpack\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdct\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mlibrosa\u001b[0m \u001b[0;31m# library for audio processing\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'librosa'"
      ]
     }
    ],
@@ -1470,13 +1479,7 @@
       "52/52 [==============================] - 9s 167ms/step - loss: 2.1472 - acc: 0.6830 - val_loss: 2.1457 - val_acc: 0.5391\n",
       "\n",
       "Epoch 00168: val_acc did not improve from 0.73854\n",
-      "Epoch 169/3000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 169/3000\n",
       "52/52 [==============================] - 9s 167ms/step - loss: 2.1699 - acc: 0.6698 - val_loss: 1.4664 - val_acc: 0.6873\n",
       "\n",
       "Epoch 00169: val_acc did not improve from 0.73854\n",
@@ -2194,13 +2197,7 @@
       "52/52 [==============================] - 9s 167ms/step - loss: 1.8889 - acc: 0.7566 - val_loss: 1.7760 - val_acc: 0.5876\n",
       "\n",
       "Epoch 00343: val_acc did not improve from 0.78437\n",
-      "Epoch 344/3000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 344/3000\n",
       "52/52 [==============================] - 9s 167ms/step - loss: 1.9225 - acc: 0.7527 - val_loss: 1.5387 - val_acc: 0.6604\n",
       "\n",
       "Epoch 00344: val_acc did not improve from 0.78437\n",
@@ -2732,13 +2729,7 @@
       "106/106 [==============================] - 11s 106ms/step - loss: 1.6244 - acc: 0.8131 - val_loss: 0.9009 - val_acc: 0.8221\n",
       "\n",
       "Epoch 00064: val_acc did not improve from 0.84636\n",
-      "Epoch 65/3000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 65/3000\n",
       "106/106 [==============================] - 11s 106ms/step - loss: 1.6425 - acc: 0.7945 - val_loss: 0.8687 - val_acc: 0.8356\n",
       "\n",
       "Epoch 00065: val_acc did not improve from 0.84636\n",
@@ -3084,13 +3075,7 @@
       "106/106 [==============================] - 11s 106ms/step - loss: 1.5203 - acc: 0.8343 - val_loss: 0.8419 - val_acc: 0.8302\n",
       "\n",
       "Epoch 00148: val_acc did not improve from 0.85445\n",
-      "Epoch 149/3000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 149/3000\n",
       "106/106 [==============================] - 11s 106ms/step - loss: 1.5164 - acc: 0.8370 - val_loss: 0.8394 - val_acc: 0.8221\n",
       "\n",
       "Epoch 00149: val_acc did not improve from 0.85445\n",
@@ -3798,13 +3783,7 @@
       "106/106 [==============================] - 11s 106ms/step - loss: 1.4869 - acc: 0.8376 - val_loss: 0.8157 - val_acc: 0.8383\n",
       "\n",
       "Epoch 00319: val_acc did not improve from 0.85445\n",
-      "Epoch 320/3000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 320/3000\n",
       "106/106 [==============================] - 11s 106ms/step - loss: 1.4926 - acc: 0.8443 - val_loss: 0.8105 - val_acc: 0.8410\n",
       "\n",
       "Epoch 00320: val_acc did not improve from 0.85445\n",
@@ -5058,13 +5037,7 @@
       "104/104 [==============================] - 19s 182ms/step - loss: 2.8935 - acc: 0.3498 - val_loss: 2.6245 - val_acc: 0.3235\n",
       "\n",
       "Epoch 00039: val_acc did not improve from 0.42318\n",
-      "Epoch 40/3000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 40/3000\n",
       "104/104 [==============================] - 19s 182ms/step - loss: 2.8556 - acc: 0.3666 - val_loss: 2.2348 - val_acc: 0.4340\n",
       "\n",
       "Epoch 00040: val_acc improved from 0.42318 to 0.43396, saving model to model/mfcc7/LGD_fold7_resnet3-.h5\n",
@@ -5584,13 +5557,7 @@
       "104/104 [==============================] - 19s 182ms/step - loss: 2.3088 - acc: 0.5676 - val_loss: 1.6239 - val_acc: 0.6092\n",
       "\n",
       "Epoch 00166: val_acc did not improve from 0.66038\n",
-      "Epoch 167/3000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 167/3000\n",
       "104/104 [==============================] - 19s 183ms/step - loss: 2.3280 - acc: 0.5739 - val_loss: 1.4356 - val_acc: 0.6550\n",
       "\n",
       "Epoch 00167: val_acc did not improve from 0.66038\n",
@@ -6652,13 +6619,7 @@
       "104/104 [==============================] - 19s 182ms/step - loss: 2.0104 - acc: 0.7025 - val_loss: 1.7787 - val_acc: 0.5957\n",
       "\n",
       "Epoch 00424: val_acc did not improve from 0.76280\n",
-      "Epoch 425/3000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 425/3000\n",
       "104/104 [==============================] - 19s 182ms/step - loss: 1.9943 - acc: 0.7049 - val_loss: 1.2392 - val_acc: 0.7358\n",
       "\n",
       "Epoch 00425: val_acc did not improve from 0.76280\n",
@@ -7006,13 +6967,7 @@
       "53/53 [==============================] - 15s 284ms/step - loss: 1.7455 - acc: 0.7553 - val_loss: 0.8799 - val_acc: 0.7978\n",
       "\n",
       "Epoch 00084: val_acc did not improve from 0.82749\n",
-      "Epoch 85/3000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 85/3000\n",
       "53/53 [==============================] - 15s 283ms/step - loss: 1.7451 - acc: 0.7488 - val_loss: 0.8698 - val_acc: 0.8059\n",
       "\n",
       "Epoch 00085: val_acc did not improve from 0.82749\n",
@@ -8755,13 +8710,7 @@
       "104/104 [==============================] - 20s 188ms/step - loss: 2.4809 - acc: 0.5219 - val_loss: 1.6722 - val_acc: 0.5795\n",
       "\n",
       "Epoch 00124: val_acc did not improve from 0.61725\n",
-      "Epoch 125/3000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 125/3000\n",
       "104/104 [==============================] - 20s 188ms/step - loss: 2.4376 - acc: 0.5309 - val_loss: 1.4753 - val_acc: 0.6442\n",
       "\n",
       "Epoch 00125: val_acc improved from 0.61725 to 0.64420, saving model to model/mfcc7/LGD_fold8_resnet3-.h5\n",
@@ -10349,13 +10298,7 @@
       "104/104 [==============================] - 20s 188ms/step - loss: 1.9837 - acc: 0.7145 - val_loss: 2.5144 - val_acc: 0.4340\n",
       "\n",
       "Epoch 00509: val_acc did not improve from 0.78706\n",
-      "Epoch 510/3000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 510/3000\n",
       "104/104 [==============================] - 20s 188ms/step - loss: 1.9553 - acc: 0.7371 - val_loss: 1.3212 - val_acc: 0.6900\n",
       "\n",
       "Epoch 00510: val_acc did not improve from 0.78706\n",
@@ -10701,13 +10644,7 @@
       "106/106 [==============================] - 20s 191ms/step - loss: 1.5062 - acc: 0.8325 - val_loss: 0.9415 - val_acc: 0.8113\n",
       "\n",
       "Epoch 00043: val_acc did not improve from 0.83019\n",
-      "Epoch 44/3000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 44/3000\n",
       "106/106 [==============================] - 20s 191ms/step - loss: 1.5139 - acc: 0.8249 - val_loss: 0.8943 - val_acc: 0.8140\n",
       "\n",
       "Epoch 00044: val_acc did not improve from 0.83019\n",
@@ -12559,13 +12496,7 @@
       "52/52 [==============================] - 6s 117ms/step - loss: 1.6585 - acc: 0.8137 - val_loss: 1.1037 - val_acc: 0.7978\n",
       "\n",
       "Epoch 00256: val_acc did not improve from 0.84097\n",
-      "Epoch 257/3000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 257/3000\n",
       "52/52 [==============================] - 6s 117ms/step - loss: 1.6196 - acc: 0.8197 - val_loss: 1.3734 - val_acc: 0.7385\n",
       "\n",
       "Epoch 00257: val_acc did not improve from 0.84097\n",
@@ -13283,13 +13214,7 @@
       "52/52 [==============================] - 6s 116ms/step - loss: 1.5632 - acc: 0.8203 - val_loss: 1.0776 - val_acc: 0.8140\n",
       "\n",
       "Epoch 00431: val_acc did not improve from 0.85445\n",
-      "Epoch 432/3000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 432/3000\n",
       "52/52 [==============================] - 6s 116ms/step - loss: 1.5312 - acc: 0.8341 - val_loss: 0.9853 - val_acc: 0.8113\n",
       "\n",
       "Epoch 00432: val_acc did not improve from 0.85445\n",
@@ -14005,13 +13930,7 @@
       "Epoch 00090: ReduceLROnPlateau reducing learning rate to 4.999999873689376e-05.\n",
       "\n",
       "Epoch 00090: val_acc improved from 0.89488 to 0.89757, saving model to model/mfcc7/LGD_semi_fold9_resnet1.h5\n",
-      "Epoch 91/3000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 91/3000\n",
       "53/53 [==============================] - 6s 117ms/step - loss: 1.3473 - acc: 0.8532 - val_loss: 0.7410 - val_acc: 0.8922\n",
       "\n",
       "Epoch 00091: val_acc did not improve from 0.89757\n",
@@ -14365,13 +14284,7 @@
       "53/53 [==============================] - 6s 117ms/step - loss: 1.3034 - acc: 0.8715 - val_loss: 0.7342 - val_acc: 0.9003\n",
       "\n",
       "Epoch 00175: val_acc did not improve from 0.90566\n",
-      "Epoch 176/3000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 176/3000\n",
       "53/53 [==============================] - 6s 118ms/step - loss: 1.3109 - acc: 0.8629 - val_loss: 0.7346 - val_acc: 0.9003\n",
       "\n",
       "Epoch 00176: val_acc did not improve from 0.90566\n",
@@ -18642,13 +18555,7 @@
       "510/510 [==============================] - 163s 319ms/step - loss: 1.3263 - acc: 0.8449 - val_loss: 0.7282 - val_acc: 0.8760\n",
       "\n",
       "Epoch 00040: val_acc improved from 0.87332 to 0.87601, saving model to model/mfcc6/LGD_fold6_self_resnet.h5\n",
-      "Epoch 41/3000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 41/3000\n",
       "510/510 [==============================] - 163s 319ms/step - loss: 1.3091 - acc: 0.8412 - val_loss: 0.7326 - val_acc: 0.8544\n",
       "\n",
       "Epoch 00041: val_acc did not improve from 0.87601\n",
@@ -19530,13 +19437,7 @@
       "510/510 [==============================] - 71s 140ms/step - loss: 1.2057 - acc: 0.8456 - val_loss: 0.7025 - val_acc: 0.8787\n",
       "\n",
       "Epoch 00042: val_acc did not improve from 0.88410\n",
-      "Epoch 43/3000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 43/3000\n",
       "510/510 [==============================] - 71s 140ms/step - loss: 1.2000 - acc: 0.8519 - val_loss: 0.7077 - val_acc: 0.8922\n",
       "\n",
       "Epoch 00043: val_acc improved from 0.88410 to 0.89218, saving model to model/mfcc6/LGD_fold7_self_resnet.h5\n",
@@ -21463,18 +21364,6 @@
    "display_name": "Python [conda env:anaconda3]",
    "language": "python",
    "name": "conda-env-anaconda3-py"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
   }
  },
  "nbformat": 4,
