--- a/leo/LGD_Phase1_Stage2_clf.ipynb
+++ b/leo/LGD_Phase1_Stage2_clf.ipynb
@@ -823,13 +823,7 @@
       "18502/18502 [==============================] - 34s 2ms/step - loss: 1.7681 - acc: 0.5420 - val_loss: 4.3153 - val_acc: 0.0377\n",
       "Epoch 173/10000\n",
       "18502/18502 [==============================] - 34s 2ms/step - loss: 1.7572 - acc: 0.5440 - val_loss: 3.8549 - val_acc: 0.0809\n",
-      "Epoch 174/10000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 174/10000\n",
       "18502/18502 [==============================] - 34s 2ms/step - loss: 1.7518 - acc: 0.5425 - val_loss: 3.8243 - val_acc: 0.0809\n",
       "Epoch 175/10000\n",
       "18502/18502 [==============================] - 34s 2ms/step - loss: 1.7443 - acc: 0.5457 - val_loss: 3.8999 - val_acc: 0.0485\n",
@@ -1093,7 +1087,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
